Use separate gradle module for natives (#6)
* Use separate gradle module for natives

* Disable javadoc warnings

* Fix build workflow